v0.1.0.1 Fix: - It should no longer zoom in when a user taps too fast on a mobile device. - Button text color should now be black on mobile devices.

--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ body {
 #upgradest, #moneyt, #timeelapsed, #click, #clickt, #pennyt, #nickelt {
     margin: 0 0 0 10px;
 }
-
+button {
+    color: black;
+}
 #button {
     background-color: #9d5728;
     color: white;
